# sphinx-in-browser-preview

./: README.md
js-sphinx-preview/: index.html  package-lock.json  package.json
js-sphinx-preview/src/: App.vue  sphinx-preview.d.ts
js-sphinx-preview/src/assets/: sphinx_preview-0.1.0-py3-none-any.whl
js-sphinx-preview/src/components/: Spinner.vue
py-sphinx-preview/: .gitignore  pyproject.toml
py-sphinx-preview/src/sphinx_preview/: __init__.py
py-sphinx-preview/tests/: test_main.py
py-sphinx-preview/tests/data/expected_ourdir/: index.html  orphan.html
py-sphinx-preview/tests/data/expected_ourdir/.doctrees/: environment.pickle  index.doctree  orphan.doctree
py-sphinx-preview/tests/data/expected_ourdir/_static/: documentation_options.js
py-sphinx-preview/tests/data/srcdir/: index.rst  orphan.rst
